--- a/accordion/index.html
+++ b/accordion/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="quest">
-            <h2>Question </h2>
-            <span id="sign">+</span> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Accordion Example</title>
+  </head>
+  <body>
+    <div class="accordion">
+      <div class="accordion-item">
+        <div class="accordion-header">SECTION 1</div>
+        <div class="accordion-content">
+          <p>This is the content of section 1.</p>
         </div>
-        <h3 id="answer">Answer</h3>
+      </div>
+      <div class="accordion-item">
+        <div class="accordion-header">SECTION 2</div>
+        <div class="accordion-content">
+          <p>This is the content of section 2.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <div class="accordion-header">SECTION 3</div>
+        <div class="accordion-content">
+          <p>This is the content of section 3.</p>
+        </div>
+      </div>
     </div>
-    <script src="./script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
